<resources>
    <string name="accept">Accept</string>
    <string name="app_name">potspot</string>
    <string name="potspot">POTSPOT</string>
    <string name="under_potspot">book a patio, balcony, backyard</string>
    <string name="log_in">Log in</string>
    <string name="under_log_in">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="your_name">Your name</string>
    <string name="sign_up">Sign Up</string>
    <string name="under_sign_up">Nice to meet you!</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="home">Home</string>
    <string name="option">option</string>
    <string name="menu_search">menu_search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="btn_find">Find first available</string>
    <string name="all_listing">All listing in Toronto</string>
    <string name="listing_map">Listing of Toronto on map</string>
    <string name="forgot_login">Forgot login?</string>
    <string name="no_problem">No problem!</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="details">details</string>
    <string name="reject">reject</string>
    <string name="review">review</string>

    <string name="nd_search">Search</string>
    <string name="nd_message">Messages</string>
    <string name="nd_pay_spot">Payed spots</string>
    <string name="nd_my_spots">My spot</string>
    <string name="nd_invite_friends">Invite friends</string>
    <string name="nd_give_feedback">Give feedback</string>

    <string name="nd_open">open</string>
    <string name="nd_close">close</string>
    <string name="search_radius">Search radius (km)</string>
    <string name="friend_text">Invite your friends\n and\n SMOKE TOGETHER</string>
    <string name="friend_email">Email of your friend</string>
    <string name="invite">invite</string>
    <string name="feedback">Feedback</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="send_feedback">Send Feedback to PotSpot about the app</string>
    <string name="thanks_for_feedback">Thanks for feedback!</string>
    <string name="no_problems">NO PROBLEMS</string>
    <string name="date_time_reserved_for">Date &amp; Time reserved for</string>
    <string name="your_potspot">Your Potspot</string>
    <string name="price_range">Price range</string>
    <string name="spot_type">Spot Type</string>
    <string name="patio">Patio</string>
    <string name="backyard">Backyard</string>
    <string name="smoking_rooms">Smoking rooms</string>
    <string name="balcony">Balcony</string>
    <string name="number_of_guests">Number of guests</string>
    <string name="guest">guest</string>
    <string name="additional_filters">Additional filters</string>
    <string name="tobacco_friendly">Tobacco friendly</string>
    <string name="handicap_accessible">Handicap accessible</string>
    <string name="heated">Heated</string>
    <string name="check_10_spots">Check 10+ spots</string>
    <string name="search_result">Search result</string>
    <string name="edit_information">Edit information</string>
    <string name="listing_setting">Listing setting</string>
    <string name="edit_your_listing">Edit your listing</string>
    <string name="title">Title</string>
    <string name="price_rate_per_30_mins">Price rate per 30 mins</string>
    <string name="maximum_number_of_guests">Maximum number of guests</string>
    <string name="listing_type">Listing type</string>
    <string name="done">Done</string>
    <string name="delete">delete</string>
    <string name="id_verification">ID Verification</string>
    <string name="become_id_verification">If you want to become a host you should pass ID Verification.</string>
    <string name="verification_instruction">1. We need good quality image of your real ID document. (id, passport, etc)
        \n\n2. You can use camera or upload from phone gallery
        \n\n3.After short moderation you will become a host!
        \n\n*Confidentiality guaranteed</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="add_photos">Add photos</string>
    <string name="live">Live</string>
    <string name="write_title">Write Title</string>
    <string name="give_your_listing_a_descriptive_heading">Give your listing a descriptive heading</string>
    <string name="write_description">Write Description</string>
    <string name="give_user_some_details_about_your_listing">Give user some details about your listing</string>
    <string name="address">Address</string>
    <string name="how_many_guests_you_can_accept">How many guests you can accept?</string>
    <string name="patio_backyard_balcony_smoking_rooms">Patio, backyard, balcony, smoking rooms</string>
    <string name="yes_no">Yes, no?</string>
    <string name="next">Next</string>
    <string name="about_me">About me</string>
    <string name="gender">Gender</string>
    <string name="member_since">Member since</string>
    <string name="birthdate">Birthdate</string>
    <string name="payment_information">Payment information</string>
    <string name="verified_account">Verified account</string>
    <string name="phone">Phone</string>
    <string name="real_id">Real ID</string>
    <string name="listing">Listing</string>
    <string name="host_panel">Host panel</string>
    <string name="edit_name">Edit name</string>
    <string name="write_some_words">Write some words about yourself</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="paypal_account">Paypal account</string>
    <string name="credit_card">Credit card</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="edit">edit</string>
    <string name="refresh">refresh</string>
    <string name="list_your_space">List your space</string>
    <string name="available_rules">Available rules</string>
    <string name="when_your_listing_is_live">When your listing is live</string>
    <string name="time_from">Time from</string>
    <string name="time_to">Time to</string>
    <string name="read_more">Read More</string>
    <string name="date_and_time">date and time</string>
    <string name="visit_date">Visit Date</string>
    <string name="visit_time">Visit Time</string>
    <string name="by">by </string>
    <string name="sign_out">Sign out</string>
    <string name="message_hint">Say anithing</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>

    <string-array name="gender_list">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="listing_type">
        <item>Patio</item>
        <item>Backyard</item>
        <item>Balcony</item>
        <item>Smoking rooms</item>
    </string-array>

    <string-array name="yes_or_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_phone">Please confirm your country code and enter your phone number</string>
    <string name="code">Code</string>
    <string name="sms_code_text">We\'ve sent you an SMS with activation code to your phone number:</string>
    <string name="change_number">change number</string>
    <string name="invalid_code">Invalid verify code</string>
    <string name="error_connection">Connection error</string>
    <string name="become_a_host">Become a host!</string>
    <string name="paid_spots">Paid spots</string>
    <string name="favourites">Favourites</string>
    <string name="my_money">My money</string>
    <string name="earn_money">earn money</string>
    <string name="while_sitting">while sitting at home!</string>
    <string name="become_a_host_today">Become a host today!</string>
    <string name="money_need">you need $%1$d by August 1 to get paid by September 1</string>
    <string name="latest_payment">Latest payment</string>
    <string name="pending">Pending</string>
    <string name="payment_history">Payment history</string>
    <string name="earned_income_total">earned income total</string>
    <string name="successfully">Successfully</string>
    <string name="add_time_rule">+ Add one more time rule</string>
    <string name="request_booking">Request booking</string>
    <string name="prev_date">You cannot order previous day</string>
    <string name="add_friends">Add friends</string>
    <string name="signup_text">We want your next Jay to be a vacation, a Jaycation! Our Hosts will make sure your next Jaycation is an experience you won\'t forget(or maybe you will)…\nExplore the many Spots in your city now! </string>
    <string name="click_anywhere">Click anywhere to continue</string>
    <string name="share_with">Share with %1$s friends</string>
    <string name="email_your_friend">Email your friend</string>
    <string name="add">Add</string>
    <string name="cannot_split">You cannot split this payment</string>
    <string name="add_more_friends">+ more friends</string>
    <string name="party_size_alert">You cannot select more then party size limit</string>
    <string name="no_spots">You do not have spots</string>
    <string name="book_request_accepted">Your book request was accepted</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="have_new_book">have a new book request</string>
    <string name="respone_timer">Response timer</string>
    <string name="successfull_payment">Successfull payment</string>
    <string name="successfull_request">Your request successfully sent</string>
    <string name="payment_progress">We are progressing your payment...</string>
    <string name="request_process">We are processing your request</string>
    <string name="select_time">Select time please</string>
    <string name="yes">YES!</string>
    <string name="no_thanks">No, thanks</string>
    <string name="hi_its">Hi! It is</string>
    <string name="join_spot">Do you want to join a spot?</string>
    <string name="card_number">Number of card</string>
    <string name="cvv_code">CVV code</string>
    <string name="expiry_date">Expiry date</string>
    <string name="successfull_invite">Successfull invite</string>
    <string name="successfull_decline">Invite successfully declined</string>
    <string name="credit_card_issue">You need accepted credit card for this</string>
    <string name="not_all_friends_accepted">Not all friends accepted or rejected invite</string>
    <string name="facebook_app_id">625863117589801</string>
    <string name="successfull_add_friend">change</string>
    <string name="available">Available</string>
    <string name="send_message">Send message</string>
    <string name="activating_card">Activating your card...</string>
    <string name="successfull_add_card">Card successfuly activated</string>
    <string name="error_card_data">Card data is invalid</string>
    <string name="try_again">Try again ?</string>
    <string name="year">year</string>
    <string name="month">month</string>
</resources>
