<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_become_host"
            android:icon="@drawable/add"
            android:title="@string/become_a_host" />

        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/nd_search" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/menu_message"
            android:title="@string/nd_message" />

        <item
            android:id="@+id/nav_pay_spot"
            android:icon="@drawable/ic_place_grey_24dp"
            android:title="@string/paid_spots" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_grey_24dp"
            android:title="@string/favourites" />

        <item
            android:id="@+id/nav_my_spot"
            android:icon="@drawable/menu_balcony"
            android:title="@string/nd_my_spots"/>

        <item
            android:id="@+id/nav_my_money"
            android:icon="@drawable/dollar"
            android:title="@string/my_money" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/menu_friend"
            android:title="@string/nd_invite_friends" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/nd_give_feedback" />

        <item
            android:icon="@drawable/exit"
            android:id="@+id/nav_log_out"
            android:title="@string/sign_out" />
    </group>
</menu>