<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/feedback_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/feedback_todo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/mainRed"
        android:text="@string/send_feedback"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/feedback_subject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/subject"
        android:theme="@style/FeedbackEditText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <EditText
        android:id="@+id/feedback_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/description"
        android:gravity="top"
        android:theme="@style/FeedbackEditText"/>

</LinearLayout>