<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="125dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="120dp">

            <TextView
                android:id="@+id/tv_potspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potspot"
                android:textColor="@android:color/white"
                android:textSize="38sp"/>

            <TextView
                android:id="@+id/tv_under_potspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/under_potspot"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/google"
        android:text="@string/google"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/txtBtnGoogle"
        android:layout_marginBottom="14dp"/>

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/first_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:onClick="onCLickLoginActivity"
            android:textColor="@android:color/white"
            android:background="@drawable/form"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/first_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="onCLickSignUpActivity"
            android:textColor="@android:color/white"
            android:background="@drawable/form"/>

    </LinearLayout>

</LinearLayout>