<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forgot_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_forgot_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_login"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tv_under_forgot_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_problem"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:theme="@style/LoginEditText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:onClick="onClickReset"
        android:background="@drawable/btn_login_part"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

</LinearLayout>