<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/helper_background">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:onClick="onCliCkBack"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="46sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="85dp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tv_under_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/under_sign_up"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditText"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/your_name"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/second_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:onClick="onClickSignUp"
        android:background="@drawable/loginbtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

</LinearLayout>