<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_search_height"
    android:background="@drawable/bg_only">

    <TextView
        android:id="@+id/tv_earn_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/earn_money"/>

    <TextView
        android:layout_below="@+id/tv_earn_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/while_sitting"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_become_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_red"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:text="@string/become_a_host"
        android:padding="12dp"
        android:gravity="center" />

</RelativeLayout>